# aterm

./: ChangeLog  Makefile.in  aclocal.m4  aterm.spec  configure  configure.ac
aterm/: Makefile.in  _aterm.h  afun.c  aterm.c  aterm1.h  aterm2.h  bafio.c  encoding.h  gc.c  memory.c  memory.h
doc/: Makefile.in  at.ps  manual.ps
doc/examples/: Makefile.in  README.txt
doc/spec/: ASF+SDF-options.sty  ASF+SDF.sty  ATerm.mtx  Makefile.in  Makefile.sources  listing.ltx
test/: Makefile.am  Makefile.in  stress.c
utils/: Makefile.am  Makefile.in  baffle.c  dicttoc.c
